cambios al frontend

--- a/src/app/tab10/tab10.page.scss
+++ b/src/app/tab10/tab10.page.scss
@@ -6,3 +6,8 @@
   margin-right: auto;
   border-radius: 10px;
 }
+.bottom-right {
+  position: absolute;
+  bottom: 10px; /* Ajusta el valor según tu preferencia */
+  right: 10px; /* Ajusta el valor según tu preferencia */
+}
