--- a/src/app/tab10/tab10.page.html
+++ b/src/app/tab10/tab10.page.html
@@ -1,19 +1,19 @@
 <ion-content [fullscreen]="true">
   <ion-header>
-      <ion-card *ngFor="let p of data">
-        <img class="imagenes" alt="imagen" src="{{p.imagen}}" />
-        <ion-card-header>
-          <ion-card-title>{{p.titulo}}</ion-card-title>
-        </ion-card-header>
+    <ion-card *ngFor="let p of data">
+      <img class="imagenes" alt="imagen" src="{{p.imagen}}" />
+      <ion-card-header>
+        <ion-card-title>{{p.titulo}}</ion-card-title>
+      </ion-card-header>
 
-        <ion-card-content>
-          <ion-card-subtitle>Descripción:</ion-card-subtitle>
-          {{p.descripcion}}
-          <ion-button (click)="presentDeleteAlert(p.id)" slot="end" color="danger" size="default">
-            <ion-icon name="trash-outline"></ion-icon>
-          </ion-button>
-        </ion-card-content>
-      </ion-card>
+      <ion-card-content>
+        <ion-card-subtitle>Descripción:</ion-card-subtitle>
+        {{p.descripcion}}
+        <ion-button (click)="presentDeleteAlert(p.id)" slot="end" color="danger" size="default" class="bottom-right">
+          <ion-icon name="trash-outline"></ion-icon>
+        </ion-button>
+      </ion-card-content>
+    </ion-card>
   </ion-header>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button (click)="redirectToTab5()">
