--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,11 +1,41 @@
 <ion-content [fullscreen]="true">
   <ion-header>
-    <ion-item *ngFor="let c of data">
-      <ion-avatar slot="start">
-        <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
-      </ion-avatar>
-      <ion-label> {{c.nombre}} </ion-label>
-      <ion-button  slot="end" color="warning" size="default"><ion-icon name="call-outline"></ion-icon></ion-button>
-    </ion-item>
+    <ion-grid>
+      <ion-row class="ion-justify-content-start">
+        <ng-container *ngFor="let c of data">
+          <ng-container *ngIf="isLargeScreen; else smallScreen">
+            <ion-col size-lg="4" size-md="6" size-sm="6" size-xs="12">
+              <ion-card>
+                <img class="product-image" alt="Silhouette of mountains"
+                  src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+                <ion-card-header>
+                  <ion-card-title>
+                    {{c.nombre}}
+                  </ion-card-title>
+                </ion-card-header>
+                <ion-card-content>
+                  <ion-button slot="end" color="warning" size="default"><ion-icon
+                      name="call-outline"></ion-icon></ion-button>
+                </ion-card-content>
+              </ion-card>
+            </ion-col>
+          </ng-container>
+          <ng-template #smallScreen>
+            <ion-col size-xs="12" size-sm="6" size-md="6" size-lg="4" size-xl="3">
+              <ion-item>
+                <ion-thumbnail slot="start">
+                  <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+                </ion-thumbnail>
+                <ion-label>
+                  {{c.nombre}}
+                  <ion-button slot="end" color="warning" size="default"><ion-icon
+                      name="call-outline"></ion-icon></ion-button>
+                </ion-label>
+              </ion-item>
+            </ion-col>
+          </ng-template>
+        </ng-container>
+      </ion-row>
+    </ion-grid>
   </ion-header>
 </ion-content>
