--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -6,7 +6,7 @@
       <ion-label>Noticias</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
+    <ion-tab-button tab="tab2" (click)="mostrarPoliticasAlerta()">
       <ion-icon aria-hidden="true" name="megaphone"></ion-icon>
       <ion-label>Alerta</ion-label>
     </ion-tab-button>
