--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -15,14 +15,14 @@
     <ion-card>
       <form class="form-container">
         <ion-item>
-          <ion-label position="floating">Nombre Completo</ion-label>
-          <ion-input [(ngModel)]="nombre_completo" name="nombreCompleto" type="text"></ion-input>
+          <ion-label position="floating">Correo Electrónico</ion-label>
+          <ion-input [(ngModel)]="email" name="email" type="text"></ion-input>
         </ion-item>
         <ion-item>
-          <ion-label position="floating">Correo Electrónico</ion-label>
-          <ion-input [(ngModel)]="email" name="email" type="email"></ion-input>
+          <ion-label position="floating">Contraseña</ion-label>
+          <ion-input [(ngModel)]="password" name="password" type="password"></ion-input>
         </ion-item>
-        <ion-button expand="full" (click)="login()">Iniciar Sesión</ion-button>
+        <ion-button expand="full" (click)="loginFire()">Iniciar Sesión</ion-button>
         <p>No tienes una cuenta</p>
         <ion-button expand="full" (click)="toggleRegisterForm()" class="show-register-form">Registrate aquí</ion-button>
       </form>
@@ -32,7 +32,7 @@
     <!-- Tu formulario de registro existente -->
     <br><br><br><br>
     <ion-card>
-      <form (ngSubmit)="registrarCuenta()" #registroForm="ngForm" class="form-container">
+      <form (ngSubmit)="signUpFire()" #registroForm="ngForm" class="form-container">
         <ion-item>
           <ion-label position="floating">Nombre Completo</ion-label>
           <ion-input type="text" name="nombre_completo" [(ngModel)]="nombre_completo" required></ion-input>
@@ -46,6 +46,11 @@
         <ion-item>
           <ion-label position="floating">Correo Electrónico (administradores)</ion-label>
           <ion-input type="email" name="email" [(ngModel)]="email"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="floating">Contraseña</ion-label>
+          <ion-input type="password" name="password" [(ngModel)]="password"></ion-input>
         </ion-item>
 
         <ion-button expand="full" type="submit">Registrar</ion-button>
