agregando capacitor google-maps - enviar coordenadas a firebase

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -4,4 +4,8 @@
       <ion-label>¡Presioname! <br><br> si estas en peligro</ion-label>
   </div>
   </ion-button>
+<div class="container">
+  <capacitor-google-map #map></capacitor-google-map>
+</div>
+
 </ion-content>
