--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -43,3 +43,18 @@ ion-content {
   justify-content: center;
   align-items: center;
 }
+
+.container{
+  width: 100%;
+  height: 100%;
+}
+
+capacitor-google-map{
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+}
+
+ion-content{
+  --background:none
+}
