--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -44,7 +44,7 @@
         </ion-item>
 
         <ion-item>
-          <ion-label position="floating">Correo Electrónico (administradores)</ion-label>
+          <ion-label position="floating">Correo Electrónico</ion-label>
           <ion-input type="email" name="email" [(ngModel)]="email"></ion-input>
         </ion-item>
 
