--- a/src/app/tab8/tab8.page.html
+++ b/src/app/tab8/tab8.page.html
@@ -1,9 +1,12 @@
-<ion-content [fullscreen]="true">
+<ion-content>
   <ion-header>
     <ion-toolbar>
       <ion-title>MONITOREO</ion-title>
     </ion-toolbar>
-  <ion-card class="image-card">
+    <div id="map">
+
+    </div>
+  <ion-card  class="image-card">
     <div class="image-container"></div>
   </ion-card>
   <ion-card>
