--- a/src/app/tab10/tab10.page.html
+++ b/src/app/tab10/tab10.page.html
@@ -1,23 +1,58 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-button (click)="redirectToTab5()"color="danger" size="default" slot="end">
+      Agregar Publicación
+    </ion-button>
+  </ion-toolbar>
+</ion-header>
 <ion-content [fullscreen]="true">
   <ion-header>
-    <ion-card *ngFor="let p of data">
-      <img class="imagenes" alt="imagen" src="{{p.imagen}}" />
-      <ion-card-header>
-        <ion-card-title>{{p.titulo}}</ion-card-title>
-      </ion-card-header>
-
-      <ion-card-content>
-        <ion-card-subtitle>Descripción:</ion-card-subtitle>
-        {{p.descripcion}}
-        <ion-button (click)="presentDeleteAlert(p.id)" slot="end" color="danger" size="default" class="bottom-right">
-          <ion-icon name="trash-outline"></ion-icon>
-        </ion-button>
-      </ion-card-content>
-    </ion-card>
+    <ion-grid>
+      <ion-row class="ion-justify-content-start">
+        <ng-container *ngFor="let p of data">
+          <ng-container *ngIf="isLargeScreen; else smallScreen">
+            <ion-col size-lg="4" size-md="6" size-sm="6" size-xs="12">
+              <ion-card>
+                <img class="product-image" alt="Silhouette of mountains" src="{{p.imagen}}" />
+                <ion-card-header>
+                  <ion-card-title>
+                    {{p.name}}
+                  </ion-card-title>
+                </ion-card-header>
+                <ion-card-content>
+                  <p><b>Descripción:</b> {{p.descripcion}}</p>
+                  <ion-button (click)="presentDeleteAlert(p.id)" slot="end" color="danger" size="default"
+                    class="bottom-right">
+                    <ion-icon name="trash-outline"></ion-icon>
+                  </ion-button>
+                </ion-card-content>
+              </ion-card>
+            </ion-col>
+          </ng-container>
+          <ng-template #smallScreen>
+            <ion-col size-xs="12" size-sm="6" size-md="6" size-lg="4" size-xl="3">
+              <ion-item>
+                <ion-thumbnail slot="start">
+                  <img alt="Silhouette of mountains" [src]="p.image" />
+                </ion-thumbnail>
+                <ion-label>
+                  {{p.name}}
+                  <p><b>Descripción:</b> {{p.descripcion}}</p>
+                </ion-label>
+              </ion-item>
+            </ion-col>
+            <ion-button (click)="presentDeleteAlert(p.id)" slot="end" color="danger" size="default"
+              class="bottom-right">
+              <ion-icon name="trash-outline"></ion-icon>
+            </ion-button>
+          </ng-template>
+        </ng-container>
+      </ion-row>
+    </ion-grid>
   </ion-header>
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+  <!-- <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button (click)="redirectToTab5()">
       <ion-icon name="add-outline"></ion-icon>
     </ion-fab-button>
-  </ion-fab>
+  </ion-fab> -->
 </ion-content>
