--- a/src/app/tab5/tab5.page.html
+++ b/src/app/tab5/tab5.page.html
@@ -1,4 +1,4 @@
-<ion-content [fullscreen]="true">
+<ion-content>
     <ion-grid>
       <ion-row>
         <ion-col size="12" size-md="8" offset-md="2">
