--- a/src/app/tabs-admin/tabs-admin.page.html
+++ b/src/app/tabs-admin/tabs-admin.page.html
@@ -1,5 +1,10 @@
 <ion-tabs color="color1">
 
+ <!--  <ion-tab-button tab="tab4">
+    <ion-icon aria-hidden="true" name="key"></ion-icon>
+    <ion-label>Admin</ion-label>
+  </ion-tab-button> -->
+
   <ion-tab-bar color="color1" slot="bottom">
     <ion-tab-button tab="tab10">
       <ion-icon aria-hidden="true" name="image"></ion-icon>
@@ -20,6 +25,7 @@
       <ion-icon aria-hidden="true" name="map"></ion-icon>
       <ion-label>Mapa</ion-label>
     </ion-tab-button>
+
 
     <ion-tab-button (click)="logout()" >
       <ion-icon aria-hidden="true" name="log-out"></ion-icon>
