--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -16,9 +16,9 @@
       <ion-label>Contactos</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab4">
-      <ion-icon aria-hidden="true" name="key"></ion-icon>
-      <ion-label>Admin</ion-label>
+    <ion-tab-button tab="tab11">
+      <ion-icon aria-hidden="true" name="person"></ion-icon>
+      <ion-label>Perfil</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
