--- a/src/app/tab12/tab12.page.html
+++ b/src/app/tab12/tab12.page.html
@@ -9,7 +9,7 @@
 
 <ion-content>
   <ion-card>
-    <form (ngSubmit)="registrarCuenta()" class="form-container">
+    <form (ngSubmit)="signUpFire()" class="form-container">
       <ion-item>
         <ion-label position="floating">Nombre Completo</ion-label>
         <ion-input type="text" name="nombre_completo" [(ngModel)]="nombre_completo" required></ion-input>
@@ -24,3 +24,4 @@
     </form>
   </ion-card>
 </ion-content>
+
