--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -14,7 +14,7 @@
                   </ion-card-title>
                 </ion-card-header>
                 <ion-card-content>
-                  <ion-button slot="end" color="warning" size="default"><ion-icon
+                  <ion-button (click)='makeCall(c.telefono)' slot="end" color="warning" size="default"><ion-icon
                       name="call-outline"></ion-icon></ion-button>
                 </ion-card-content>
               </ion-card>
