--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,13 +1,13 @@
 <ion-content [fullscreen]="true">
   <ion-header>
     <ion-grid>
-      
+
       <ion-row class="ion-justify-content-start">
         <ng-container *ngFor="let p of data">
           <ng-container *ngIf="isLargeScreen; else smallScreen">
             <ion-col size-lg="4" size-md="6" size-sm="6" size-xs="12">
               <ion-card>
-                <img class="product-image" alt="Silhouette of mountains" src="{{p.imagen}}" />
+                <img class="product-image" alt="Silhouette of mountains" [src]="p.imagen" />
                 <ion-card-header>
                   <ion-card-title>
                     {{p.name}}
