--- a/src/app/tabs-admin/tabs-admin.page.html
+++ b/src/app/tabs-admin/tabs-admin.page.html
@@ -1,22 +1,17 @@
-<ion-tabs color="color1">
-
- <!--  <ion-tab-button tab="tab4">
-    <ion-icon aria-hidden="true" name="key"></ion-icon>
-    <ion-label>Admin</ion-label>
-  </ion-tab-button> -->
+<ion-tabs *ngIf="!tabsDisabled" color="color1">
 
   <ion-tab-bar color="color1" slot="bottom">
-    <ion-tab-button tab="tab10">
+    <ion-tab-button  tab="tab10">
       <ion-icon aria-hidden="true" name="image"></ion-icon>
       <ion-label>Publicacion</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab6">
+    <ion-tab-button  tab="tab6">
       <ion-icon aria-hidden="true" name="people"></ion-icon>
       <ion-label>Usuarios</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab9">
+    <ion-tab-button  tab="tab9">
       <ion-icon aria-hidden="true" name="person-add"></ion-icon>
       <ion-label>Contactos</ion-label>
     </ion-tab-button>
@@ -27,7 +22,7 @@
     </ion-tab-button>
 
 
-    <ion-tab-button (click)="logout()" >
+    <ion-tab-button  (click)="logout()" >
       <ion-icon aria-hidden="true" name="log-out"></ion-icon>
       <ion-label>Cerrar Sesión</ion-label>
     </ion-tab-button>
